--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Rubix</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, maximum-scale=1">
+  <title>Rubix Technologies</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+	<%= stylesheet_link_tag    'animate', media: 'all', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'animation', 'data-turbolinks-track' => true %>
+<!--[if lt IE 9]>
+  <%= javascript_include_tag 'respond-1.1.0.min', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'html5shiv', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'html5element', 'data-turbolinks-track' => true %>
+<![endif]-->
   <%= csrf_meta_tags %>
+  <link rel="icon" href="favicon.png" type="image/png">
 </head>
 <body>
-
-<%= yield %>
-
+<%= render '\layouts/header' %>
+<%= render '\layouts/hero' %>
+<%= render '\layouts/aboutus' %>
+<%= render '\layouts/services' %>
+<%= render '\layouts/footer' %>
+<%= render '\layouts/jscripts' %>
 </body>
 </html>
