image cdn changes

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -236,7 +236,7 @@ p {
 
 .top_cont_outer {
     height: 100vh;
-    background-image: url(banner.jpg);
+    background-image: url(http://res.cloudinary.com/anik3tra0/image/upload/v1448284504/banner_k0rq6f.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
