Secured deployment files

--- a/app/views/layouts/_services.html.erb
+++ b/app/views/layouts/_services.html.erb
@@ -67,7 +67,7 @@
         </div>
         <div class="col-lg-4 borderLeft mrgTop">
           <div class="service_block">
-            <div class="service_icon icon3  delay-03s animated wow zoomIn"> <span><i class="fa fa-users"></i></span> </div>
+            <div class="service_icon icon3  delay-03s animated wow zoomIn"> <span><i class="fa fa-database"></i></span> </div>
             <h3 class="animated fadeInUp wow">Data Acquisition & Communication Modules</h3>
             <p class="animated fadeInDown wow">We offer a wide range of high-tech Data Acquisition Cards to meet the various needs of industrial application and new automation projects powered by the latest technology.</p>
           </div>
