--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <%= javascript_include_tag 'html5element', 'data-turbolinks-track' => true %>
 <![endif]-->
   <%= csrf_meta_tags %>
-  <link rel="icon" href="favicon.png" type="image/png">
+  <link rel="icon" href="favicon.ico" type="image/png">
 </head>
 <body>
 <%= render '\layouts/header' %>
