--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -21,14 +21,17 @@
 		 <div class="contact_info">
                             <div class="detail">
                                 <h4>Rubix Technologies</h4>
-                                <p>6, Kruti Industrial Estate<br>
-                                Sangam Press Lane<br>
-                                Kothrud<br>
-                                Pune - 411038</p>
+                                <p>Span House, <br>
+                                Sr.No.: 24/1/1 + 1/2/2B/1/35,<br>
+                                Behind Arvind Enclave, Sai Chowk,<br>
+                                Opposite Arogya Diagnostic Clinic,<br>
+                                Near Moze College,<br>
+                                Balewadi<br>
+                                Pune - 411045</p>
                             </div>
                             <div class="detail">
                                 <h4>Call us</h4>
-                                <p><a href="tel:+912025444473 ">+91-2025444473</a>  |  <a href="tel:+912025424829 ">+91-2025424829</a></p>
+                                <p><a href="tel:+912065326662 ">+91-2065326662</a>
                             </div>
                             <div class="detail">
                                 <h4>Email us</h4>
