--- a/app/views/layouts/_hero.html.erb
+++ b/app/views/layouts/_hero.html.erb
@@ -8,7 +8,7 @@
             <div class="top_left_cont zoomIn wow animated"> 
               <h2>So begins a new age of <strong>Technology</strong></h2>
               <p class="text-center">More than experts, we deliver comphrensive, innovative & state of the art solutions, specifically catering to your requirements.</p>
-              <h1 class="text-center"><a href="#aboutUs" class="read_more2">Read more</a> </h1></div>
+              <h1 class="text-center"><a href="#aboutUs" class="read_more2" style="position: relative;">Read more</a> </h1></div>
           </div>
 
 		  </div>
